# rust-mariadb-udfs

./: CMakeLists.txt  README.md
cmake/Modules/: FindMySQL.cmake
src/: lib.rs  summation_udf.c
